# SPDX-FileCopyrightText: The infect authors
# SPDX-License-Identifier: MPL-2.0

[package]
name = "infect"
description = "Intent/effect/task - A variation on the Model View Intent (MVI) paradigm"
version = "0.0.25"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/uklotzde/infect"
keywords = ["application", "dataflow", "unidirectional", "model"]
categories = ["asynchronous", "gui", "web-programming"]
edition = "2021"
include = ["/src", "/README.md", "/LICENSES"]

[dependencies]
futures = { version = "0.3.27", default-features = false, features = ["std"] }
log = "0.4.17"
